# ilmek

./: .gitignore  AGENTS.md  CLAUDE.md  NOTICE  README.md  pyproject.toml
docs/lexicon-candidates/: README.md  adjectives.json  nouns.json  verbs.json
docs/superpowers/plans/: 2026-07-23-tdk-high-yield-lexicon.md
docs/superpowers/specs/: 2026-07-21-ilmek-v0.1-core-design.md  2026-07-23-tdk-high-yield-lexicon-design.md
ilmek/: __init__.py  cli.py
ilmek/backends/: __init__.py  base.py  native.py  stanza.py  zemberek.py
ilmek/core/: __init__.py  alphabet.py  document.py  normalization.py  tags.py  tokenization.py
ilmek/data/disambiguation/: weights.json
ilmek/data/eval/: gold.json
ilmek/data/lexicon/: adjectives.json  adjectives_core2.json  common_core3.json  diminutives.json  feedback_core.json  function_words.json  loanwords.json  nouns.json  nouns_core2.json  other.json  pronouns.json  reduplication.json  tdk_frequently_confused.json  verbs.json  verbs_core2.json
ilmek/disambiguation/: __init__.py  disambiguator.py  scoring.py
ilmek/evaluation/: __init__.py  benchmark.py  metrics.py
ilmek/morphology/: __init__.py  analyzer.py  lemmatizer.py  lexicon.py  morphotactics.py  phonology.py  stemmer.py
ilmek/morphology/morphotactics/: __init__.py  derivational_suffixes.py  noun_suffixes.py  states.py  suffix.py  transitions.py  verb_suffixes.py
ilmek/pipeline/: __init__.py  pipeline.py
tests/: conftest.py  test_agentive_man_nouns.py  test_api.py  test_benchmark.py  test_ca_sal_ordinal.py  test_cli.py  test_closed_classes.py  test_common_core3_lexicon.py  test_converbs.py  test_denominal_verbs.py  test_derivation.py  test_diminutive.py  test_disambiguation.py  test_ek_fiil.py  test_evaluation_metrics.py  test_factive_ranking.py  test_feedback_regressions.py  test_function_words.py  test_guesser.py  test_interrogative.py  test_ki.py  test_lexicon_batch.py  test_lexicon_batch2.py  test_lexicon_merge.py  test_loanwords_distributive.py  test_longtail_das_imsi.py  test_makta.py  test_negative_copula.py  test_normalization.py  test_noun_morphology.py  test_numeric_and_acronym.py  test_participles.py  test_phonology.py  test_reduplication.py  test_tokenization.py  test_verb_aorist_ability.py  test_verb_morphology.py  test_verb_voice.py
