[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ilmek"
version = "0.1.0a0"
description = "Explainable Turkish morphology: stemmer, lemmatizer, and morphological analyzer over a shared native engine."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "ilmek contributors" }]
keywords = [
    "turkish",
    "turkic",
    "nlp",
    "morphology",
    "lemmatizer",
    "stemmer",
    "morphological-analysis",
    "stemming",
    "lemmatization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Turkish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
stanza = ["stanza>=1.7"]
zemberek = ["jpype1>=1.5"]
server = ["fastapi>=0.110", "uvicorn>=0.29"]
all = ["ilmek[stanza,zemberek,server]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/levancedigital/ilmek"
Repository = "https://github.com/levancedigital/ilmek"
Issues = "https://github.com/levancedigital/ilmek/issues"

[project.scripts]
ilmek = "ilmek.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ilmek"]

[tool.hatch.build.targets.wheel.force-include]
"ilmek/data" = "ilmek/data"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "positive: a rule/behavior that SHOULD apply",
    "negative: a rule/behavior that should NOT apply",
    "exception: an irregular/exception case",
    "consistency: stem/lemma/analyze must agree",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ilmek"]
